--- a/package.json
+++ b/package.json
@@ -14,16 +14,13 @@
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-query-devtools": "^5.51.1",
     "@tanstack/react-router": "^1.45.0",
-    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
-    "postcss": "^8.4.39",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "tailwindcss": "^3.4.5"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.45.0",
